chart/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: color-name-service
  namespace: color-name
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: color-name
