chart/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: color-name-ingress
  namespace: color-name
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - getcolorname.com
    secretName: color-name-tls
  rules:
  - host: getcolorname.com
    http:
      paths:
      - backend:
          serviceName: color-name-service
          servicePort: 80
